--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -5,9 +5,9 @@ icon: "clipboard-list"
 ---
 
 <Info>
-  Tests can be generated automatically by Galtea providing a knowledge file as shown [here](/sdk/api/test/service#create-test).
+  Tests can be generated automatically by Galtea providing a knowledge file [via the sdk](http://localhost:3000/sdk/api/test/create) or the dashboard.
 
-  In this guide, we will show you how to create custom [tests](/concepts/product/test), where you can define the [test cases](/concepts/product/test/case).
+  In this guide, we will show you how to create custom [tests](/concepts/product/test), where you define the [test cases](/concepts/product/test/case).
 </Info>
 
 ## Creating Tests with the SDK
