--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -4,105 +4,80 @@ description: "Learn how to create and upload custom tests using the SDK"
 icon: "clipboard-list"
 ---
 
-<Info>
-  Tests can be generated automatically by Galtea providing a knowledge file [via the sdk](http://localhost:3000/sdk/api/test/create) or the dashboard.
-
-  In this guide, we will show you how to create custom [tests](/concepts/product/test), where you define the [test cases](/concepts/product/test/case).
-</Info>
+While Galtea can automatically generate tests from a knowledge file, you can also create custom [Tests](/concepts/product/test) by providing your own set of [Test Cases](/concepts/product/test/case).
 
 ## Creating Tests with the SDK
 
-[Tests](/concepts/product/test) group the [test cases](/concepts/product/test/case) that will evaluate your [product's](/concepts/product) performance. The Galtea SDK provides methods to create both [quality tests](/concepts/product/test/quality-tests) and [red teaming tests](/concepts/product/test/red-teaming-tests).
+<Info>
+  Tests can be generated automatically by Galtea providing a knowledge file [via the sdk](http://localhost:3000/sdk/api/test/create) or the dashboard.
+</Info>
+
+The Galtea SDK provides methods to create both [Quality Tests](/concepts/product/test/quality-tests) and [Red Teaming Tests](/concepts/product/test/red-teaming-tests).
+
 
 <Tabs>
   <Tab title="Upload Existing Test File">
-    If you already have a prepared test file, you can upload it directly to the Galtea platform.
+    If you have a prepared test file in CSV format, you can upload it directly.
 
     ```python
     from galtea import Galtea
+    import os
 
-    # Initialize the SDK with your API key
-    galtea = Galtea(api_key="YOUR_API_KEY")
+    galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 
-    # Upload test to Galtea Platform
+    # Upload a pre-existing test file to the Galtea Platform
     test = galtea.tests.create(
-        name="product-knowledge-test",
-        type="QUALITY",  # Options: "QUALITY" or "RED_TEAMING"
+        name="financial-qa-test",
+        type="QUALITY",
         product_id="YOUR_PRODUCT_ID",
-        test_file_path="path/to/your/test_file.csv"
+        test_file_path="path/to/your/finance_db_sample.csv"
     )
 
     print(f"Test created with ID: {test.id}")
     ```
-
-    <Warning>
-      The test file should follow the appropriate structure for either [quality tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [red teaming tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format).
     
-      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case/service#create-test-case).
+    <Warning>
+      The test file must follow the structure specified for [Quality Tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [Red Teaming Tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format). If the file is not correctly formatted, test cases will not be created automatically, but you can still [add them manually](/sdk/api/test-case/create).
     </Warning>
   </Tab>
 
-  <Tab title="Create Test From Scratch">
-    When you need more control over your test content, you can create test files programmatically before uploading them.
+  <Tab title="Generate Test from Knowledge Base">
+    You can provide a knowledge base file (e.g., PDF, TXT) and have Galtea generate the test cases for you. This is a powerful feature for creating comprehensive tests with minimal effort.
 
     ```python
     from galtea import Galtea
-    import pandas as pd
+    import os
 
-    # Initialize the SDK with your API key
-    galtea = Galtea(api_key="YOUR_API_KEY")
+    galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 
-    # Prepare test data
-    test_data = [
-        {
-            "instance_id": 0,
-            "input": "What is the capital of France?", 
-            "expected_output": "Paris",
-            "tag": "geography",
-            "context": ""
-        },
-        {
-            "instance_id": 1,
-            "input": "What is the capital of Spain?", 
-            "expected_output": "Madrid",
-            "tag": "geography",
-            "context": ""
-        }
-    ]
-
-    # Create DataFrame and save to CSV
-    test_df = pd.DataFrame(test_data)
-    test_file_path = 'custom_geography_test.csv'
-    test_df.to_csv(test_file_path)
-
-    # Upload test to Galtea Platform
+    # Generate a test from a PDF knowledge base
     test = galtea.tests.create(
-        name="geography-knowledge-test",
+        name="legal-document-test-from-pdf",
         type="QUALITY",
         product_id="YOUR_PRODUCT_ID",
-        test_file_path=test_file_path
+        ground_truth_file_path="path/to/your/legal_document.pdf",
+        language="english",
+        # Generate variations to improve test robustness
+        variants=["paraphrased", "incorrect", "typos"], 
+        max_test_cases=50 # Limit the number of generated test cases
     )
 
-    print(f"Test created with ID: {test.id}")
+    print(f"Test generated from knowledge base with ID: {test.id}")
     ```
 
-    <Warning>
-      Make sure your test data follows the correct structure as specified in the [quality tests](/concepts/product/test/quality-tests#example-quality-tests-and-file-format) or [red teaming tests](/concepts/product/test/red-teaming-tests#example-red-teaming-tests-and-file-format) documentation.
-      
-      If the file is not correctly formatted, the test cases will not be created. But they can be created manually following [this example](/sdk/api/test-case/service#create-test-case).
-    </Warning>
+    <Info>
+    The `variants` parameter instructs Galtea to create evolved versions of the base test cases. See the [Quality Test Evolutions](/concepts/product/test/quality-evolutions) documentation for more details. For Red Teaming, `variants` specify [threats](/concepts/product/test/red-teaming-threats) and you can also add `strategies`.
+    </Info>
   </Tab>
 </Tabs>
 
 ## Next Steps
 
-After creating a test:
-
 <CardGroup cols={2}>
-  <Card title="Create an Evaluation" icon="badge-check" href="/sdk/examples/create-evaluation">
-    Run your test against a specific product version
+  <Card title="Run a Test-Based Evaluation" icon="badge-check" href="/sdk/examples/create-evaluation">
+    Run your test against a specific product version.
   </Card>
   <Card title="API Reference" icon="code" href="/sdk/api/test/service">
-    View the complete Test Service API reference
+    View the complete Test Service API reference.
   </Card>
 </CardGroup>
