--- a/snippets/cards/evaluation-card.mdx
+++ b/snippets/cards/evaluation-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Evaluation" icon="badge-check" iconType="solid" href="/concepts/product/version/session/evaluation">
-  A link between a product version and a test that groups evaluation tasks
+  A group of evaluable Inference Results from a particular session
 </Card>
