--- a/concepts/product/version/session/evaluation.mdx
+++ b/concepts/product/version/session/evaluation.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Evaluation"
-description: "A link between a product version and a test"
+description: "A group of inference results from a session to be used by evaluation tasks"
 icon: "badge-check"
 iconType: "solid"
 ---
